--- a/src/component/About/about.css
+++ b/src/component/About/about.css
@@ -86,7 +86,7 @@
     }
 }
 
-@media screen and (max-width: 780px){  
+@media screen and (max-width: 768px){  
     .about h2{
         margin-bottom: 0;
     }
@@ -104,7 +104,7 @@
         height: 100%;
     }
 }
-@media screen and (max-width: 500px){
+@media screen and (max-width: 435px){
     .about-background{
         width: 15%;
         align-items: center;
@@ -112,7 +112,7 @@
         margin-top: 0rem;
     }
     .about-img{
-        width: 100%;
+        display: none;
     }
     .about-card{
         grid-template-columns: 1fr 1fr;
@@ -127,19 +127,22 @@
         margin-bottom: .5rem;
     }
     .about-content p{
-        margin: .5rem 2rem;
+        margin: 2.5rem 2rem;
     }
     .about-content {
         align-content: center;
     }
    
 }
-@media screen and (max-width: 379px){
+@media screen and (max-width: 375px){
     .about-container{
         width: 100%;
     }
     .about-img{
         display: none;
+    }
+    .about-content p{
+        margin: 0 2rem;
     }
     .about-card{
         grid-template-columns: 1fr;
@@ -147,9 +150,11 @@
     }
     .card{
         padding: 0.1rem;
-        margin-bottom: 0.5rem;
+        margin-bottom: 0.4rem;
     }
-    .about-content a{
-        display: none;
+    .about-card-icon{
+        font-size: 1.5rem;
+        margin-bottom: 0;
     }
+    
 }
