--- a/src/component/Header/header.css
+++ b/src/component/Header/header.css
@@ -64,22 +64,15 @@ header{
 }
 
 /* Media Queries for Mobile */
-@media screen and (max-width: 780px){
-    /* header{
-        height: 100vh;
-    } */
-    /* .header{
-        margin: 0;
-        padding-top: 0;
-        display: flex;
-        flex-direction: column;
-        width: 100%;
-        height: 100%;
-        position: relative;
-        max-width: var(--max-width);
-    } */
+@media screen and (max-width: 768px){
+   .header{
+        margin-top: 5rem;
+        justify-content: center;
+   }
+   .header__container p{
+        margin-top: 1rem;
+    }
     .header__container{
-        /* width: 100%; */
         justify-items: center;
         margin: 0 auto;
         text-align: center;
@@ -88,23 +81,27 @@ header{
         display: flex;
         gap: 30px;
         margin-bottom: .1rem;
-        margin-left: 40%;
+        margin-left: 35%;
     }
     .me{
         display: none;
     }
     .cta{
+        margin-top: 2rem;
         justify-content: center;
     }
     
 }
-@media screen and (max-width: 500px){
+@media screen and (max-width: 435px){
     .header__container{
         width: 100%;
         justify-items: center;
         margin: 0 auto;
         text-align: center;
         margin-bottom: 140px;
+    }
+    .header{
+        margin-top: 2rem;
     }
     .header__container h1{
         font-size: 2rem;
@@ -116,7 +113,7 @@ header{
     .header-socials{
         display: flex;
         gap: 30px;
-        margin-bottom: 0;
+        margin-bottom: 1rem;
         margin-left: 25%;
         
     }
@@ -128,12 +125,19 @@ header{
     }
     
 }
-@media screen and (max-width: 379px){
+@media screen and (max-width: 375px){
     .header{
-        margin-top: 3rem; 
+        margin-top: 2rem; 
+    }
+    .header__container p{
+        margin-top: .5rem;
     }
     .header-socials{
-        display: none;
+        margin-bottom: 1px;
+    }
+    .cta{
+        justify-content: center;
+        margin-top: 1rem;
     }
     
 }
